#!/usr/bin/env python3
"""
è¿œç¨‹æœåŠ¡APIå®Œæ•´æµ‹è¯•è„šæœ¬

ç”¨æ³•:
    python scripts/test_remote_api.py                    # ä½¿ç”¨é»˜è®¤é…ç½®
    python scripts/test_remote_api.py --host 101.43.116.10  # æŒ‡å®šæœåŠ¡å™¨IP
    python scripts/test_remote_api.py --api-key your-key    # æŒ‡å®šAPIå¯†é’¥
    python scripts/test_remote_api.py --grpc                # åŒæ—¶æµ‹è¯•gRPC
"""

import argparse
import json
import sys
import time
from datetime import datetime, timedelta
from typing import Any, Dict, List, Optional, Tuple
from dataclasses import dataclass, field

try:
    import httpx
except ImportError:
    print("âŒ è¯·å…ˆå®‰è£… httpx: pip install httpx")
    sys.exit(1)


@dataclass
class TestResult:
    """æµ‹è¯•ç»“æœ"""
    name: str
    success: bool
    status_code: Optional[int] = None
    response_time: float = 0.0
    error: Optional[str] = None
    response_data: Optional[Dict] = None


@dataclass
class TestStats:
    """æµ‹è¯•ç»Ÿè®¡"""
    total: int = 0
    passed: int = 0
    failed: int = 0
    skipped: int = 0
    results: List[TestResult] = field(default_factory=list)
    
    @property
    def success_rate(self) -> float:
        if self.total == 0:
            return 0.0
        return (self.passed / self.total) * 100


class APITester:
    """APIæµ‹è¯•å™¨"""
    
    def __init__(self, host: str, port: int, api_key: str, timeout: int = 30):
        self.base_url = f"http://{host}:{port}"
        self.api_key = api_key
        self.timeout = timeout
        self.stats = TestStats()
        self.client = httpx.Client(timeout=timeout)
        
    def __del__(self):
        if hasattr(self, 'client'):
            self.client.close()
    
    def _get_headers(self) -> Dict[str, str]:
        """è·å–è¯·æ±‚å¤´"""
        return {
            "Content-Type": "application/json",
            "Authorization": f"Bearer {self.api_key}"
        }
    
    def _print_result(self, result: TestResult):
        """æ‰“å°æµ‹è¯•ç»“æœ"""
        status = "âœ…" if result.success else "âŒ"
        time_str = f"({result.response_time:.0f}ms)"
        
        if result.success:
            print(f"  {status} {result.name} {time_str}")
        else:
            print(f"  {status} {result.name} {time_str}")
            if result.error:
                print(f"      é”™è¯¯: {result.error}")
    
    def test_endpoint(
        self,
        name: str,
        method: str,
        endpoint: str,
        data: Optional[Dict] = None,
        require_auth: bool = True,
        expected_status: int = 200
    ) -> TestResult:
        """æµ‹è¯•å•ä¸ªç«¯ç‚¹"""
        self.stats.total += 1
        url = f"{self.base_url}{endpoint}"
        headers = self._get_headers() if require_auth else {"Content-Type": "application/json"}
        
        start_time = time.time()
        
        try:
            if method.upper() == "GET":
                response = self.client.get(url, headers=headers)
            elif method.upper() == "POST":
                response = self.client.post(url, json=data, headers=headers)
            elif method.upper() == "DELETE":
                response = self.client.delete(url, headers=headers)
            else:
                raise ValueError(f"ä¸æ”¯æŒçš„HTTPæ–¹æ³•: {method}")
            
            response_time = (time.time() - start_time) * 1000
            
            if response.status_code == expected_status:
                self.stats.passed += 1
                result = TestResult(
                    name=name,
                    success=True,
                    status_code=response.status_code,
                    response_time=response_time,
                    response_data=response.json() if response.text else None
                )
            else:
                self.stats.failed += 1
                error_msg = response.text[:200] if response.text else "æ— å“åº”å†…å®¹"
                result = TestResult(
                    name=name,
                    success=False,
                    status_code=response.status_code,
                    response_time=response_time,
                    error=f"HTTP {response.status_code}: {error_msg}"
                )
                
        except httpx.ConnectError:
            self.stats.failed += 1
            result = TestResult(
                name=name,
                success=False,
                response_time=(time.time() - start_time) * 1000,
                error=f"è¿æ¥å¤±è´¥: æ— æ³•è¿æ¥åˆ° {url}"
            )
        except httpx.TimeoutException:
            self.stats.failed += 1
            result = TestResult(
                name=name,
                success=False,
                response_time=(time.time() - start_time) * 1000,
                error=f"è¯·æ±‚è¶…æ—¶ ({self.timeout}s)"
            )
        except Exception as e:
            self.stats.failed += 1
            result = TestResult(
                name=name,
                success=False,
                response_time=(time.time() - start_time) * 1000,
                error=str(e)
            )
        
        self.stats.results.append(result)
        self._print_result(result)
        return result
    
    def run_health_tests(self):
        """è¿è¡Œå¥åº·æ£€æŸ¥æµ‹è¯•"""
        print("\n" + "=" * 60)
        print("ğŸ“‹ 1. å¥åº·æ£€æŸ¥æ¥å£")
        print("=" * 60)
        
        # å¥åº·æ£€æŸ¥æ¥å£ä¸éœ€è¦è®¤è¯
        self.test_endpoint("æ ¹è·¯å¾„", "GET", "/", require_auth=False)
        self.test_endpoint("åº”ç”¨ä¿¡æ¯", "GET", "/info", require_auth=False)
        self.test_endpoint("å¥åº·æ£€æŸ¥", "GET", "/health/", require_auth=False)
        self.test_endpoint("å°±ç»ªæ£€æŸ¥", "GET", "/health/ready", require_auth=False)
        self.test_endpoint("å­˜æ´»æ£€æŸ¥", "GET", "/health/live", require_auth=False)
    
    def run_data_api_tests(self):
        """è¿è¡Œæ•°æ®æœåŠ¡APIæµ‹è¯•"""
        print("\n" + "=" * 60)
        print("ğŸ“‹ 2. æ•°æ®æœåŠ¡æ¥å£")
        print("=" * 60)
        
        # 2.1 åŸºç¡€ä¿¡æ¯æ¥å£
        print("\n  ğŸ“ åŸºç¡€ä¿¡æ¯")
        self.test_endpoint("è·å–å¯ç”¨å‘¨æœŸåˆ—è¡¨", "GET", "/api/v1/data/period-list")
        self.test_endpoint("è·å–æœ¬åœ°æ•°æ®è·¯å¾„", "GET", "/api/v1/data/data-dir")
        self.test_endpoint("è·å–èŠ‚å‡æ—¥åˆ—è¡¨", "GET", "/api/v1/data/holidays")
        self.test_endpoint("è·å–åˆçº¦ç±»å‹", "GET", "/api/v1/data/instrument-type/600519.SH")
        self.test_endpoint("è·å–åˆçº¦ä¿¡æ¯", "GET", "/api/v1/data/instrument/600519.SH")
        self.test_endpoint("è·å–äº¤æ˜“æ—¥å†", "GET", "/api/v1/data/trading-calendar/2025")
        
        # 2.2 è¡Œæƒ…æ•°æ®æ¥å£
        print("\n  ğŸ“ è¡Œæƒ…æ•°æ®")
        end_date = datetime.now()
        start_date = end_date - timedelta(days=10)
        
        market_request = {
            "stock_codes": ["600519.SH", "000001.SZ"],
            "start_date": start_date.strftime("%Y%m%d"),
            "end_date": end_date.strftime("%Y%m%d"),
            "period": "1d"
        }
        self.test_endpoint("è·å–å¸‚åœºæ•°æ®(æ—¥çº¿)", "POST", "/api/v1/data/market", market_request)
        
        # åˆ†é’Ÿçº¿æ•°æ®
        minute_request = {
            "stock_codes": ["600519.SH"],
            "start_date": (end_date - timedelta(days=1)).strftime("%Y%m%d"),
            "end_date": end_date.strftime("%Y%m%d"),
            "period": "5m"
        }
        self.test_endpoint("è·å–å¸‚åœºæ•°æ®(5åˆ†é’Ÿ)", "POST", "/api/v1/data/market", minute_request)
        
        # æœ¬åœ°æ•°æ®
        local_request = {
            "stock_codes": ["600519.SH"],
            "start_date": start_date.strftime("%Y%m%d"),
            "end_date": end_date.strftime("%Y%m%d"),
            "period": "1d"
        }
        self.test_endpoint("è·å–æœ¬åœ°è¡Œæƒ…æ•°æ®", "POST", "/api/v1/data/local-data", local_request)
        
        # Tickæ•°æ®
        tick_request = {
            "stock_codes": ["600519.SH"]
        }
        self.test_endpoint("è·å–å®Œæ•´Tickæ•°æ®", "POST", "/api/v1/data/full-tick", tick_request)
        
        # é™¤æƒé™¤æ¯æ•°æ®
        divid_request = {
            "stock_code": "600519.SH"
        }
        self.test_endpoint("è·å–é™¤æƒé™¤æ¯æ•°æ®", "POST", "/api/v1/data/divid-factors", divid_request)
        
        # Kçº¿æ•°æ®
        kline_request = {
            "stock_codes": ["600519.SH"],
            "start_date": start_date.strftime("%Y%m%d"),
            "end_date": end_date.strftime("%Y%m%d"),
            "period": "1d"
        }
        self.test_endpoint("è·å–å®Œæ•´Kçº¿æ•°æ®", "POST", "/api/v1/data/full-kline", kline_request)
        
        # 2.3 æ¿å—æ•°æ®æ¥å£
        print("\n  ğŸ“ æ¿å—æ•°æ®")
        self.test_endpoint("è·å–æ¿å—åˆ—è¡¨", "GET", "/api/v1/data/sectors")
        
        sector_request = {"sector_name": "æ²ªæ·±300"}
        self.test_endpoint("è·å–æ¿å—è‚¡ç¥¨", "POST", "/api/v1/data/sector", sector_request)
        
        # æŒ‡æ•°æƒé‡
        index_request = {
            "index_code": "000300.SH"
        }
        self.test_endpoint("è·å–æŒ‡æ•°æƒé‡", "POST", "/api/v1/data/index-weight", index_request)
        
        # 2.4 è´¢åŠ¡æ•°æ®æ¥å£
        print("\n  ğŸ“ è´¢åŠ¡æ•°æ®")
        financial_request = {
            "stock_codes": ["600519.SH"],
            "table_list": ["Capital"],
            "start_date": "20240101",
            "end_date": "20241231"
        }
        self.test_endpoint("è·å–è´¢åŠ¡æ•°æ®", "POST", "/api/v1/data/financial", financial_request)
        
        # 2.5 å…¶ä»–æ•°æ®æ¥å£
        print("\n  ğŸ“ å…¶ä»–æ•°æ®")
        self.test_endpoint("è·å–å¯è½¬å€ºä¿¡æ¯", "GET", "/api/v1/data/convertible-bonds")
        self.test_endpoint("è·å–æ–°è‚¡ç”³è´­ä¿¡æ¯", "GET", "/api/v1/data/ipo-info")
        self.test_endpoint("è·å–ETFä¿¡æ¯", "GET", "/api/v1/data/etf/510050.SH")
        
        # 2.6 Level2æ•°æ®æ¥å£
        print("\n  ğŸ“ Level2æ•°æ®")
        l2_request = {"stock_codes": ["600519.SH"]}
        self.test_endpoint("è·å–L2å¿«ç…§æ•°æ®", "POST", "/api/v1/data/l2/quote", l2_request)
        self.test_endpoint("è·å–L2é€ç¬”å§”æ‰˜", "POST", "/api/v1/data/l2/order", l2_request)
        self.test_endpoint("è·å–L2é€ç¬”æˆäº¤", "POST", "/api/v1/data/l2/transaction", l2_request)
    
    def run_trading_api_tests(self):
        """è¿è¡Œäº¤æ˜“æœåŠ¡APIæµ‹è¯•"""
        print("\n" + "=" * 60)
        print("ğŸ“‹ 3. äº¤æ˜“æœåŠ¡æ¥å£")
        print("=" * 60)
        
        # 3.1 è¿æ¥è´¦æˆ·
        connect_request = {
            "account_id": "test_account_001",
            "password": "test_password",
            "account_type": "SECURITY"
        }
        result = self.test_endpoint("è¿æ¥äº¤æ˜“è´¦æˆ·", "POST", "/api/v1/trading/connect", connect_request)
        
        if not result.success:
            print("  âš ï¸  è¿æ¥å¤±è´¥ï¼Œè·³è¿‡åç»­äº¤æ˜“æ¥å£æµ‹è¯•")
            return
        
        # æå–session_id
        session_id = "test_session"
        if result.response_data and "session_id" in result.response_data:
            session_id = result.response_data["session_id"]
            print(f"  ğŸ“ è·å–åˆ° session_id: {session_id}")
        
        # 3.2 è´¦æˆ·ä¿¡æ¯
        self.test_endpoint("è·å–è´¦æˆ·ä¿¡æ¯", "GET", f"/api/v1/trading/account/{session_id}")
        self.test_endpoint("è·å–æŒä»“ä¿¡æ¯", "GET", f"/api/v1/trading/positions/{session_id}")
        self.test_endpoint("è·å–èµ„äº§ä¿¡æ¯", "GET", f"/api/v1/trading/asset/{session_id}")
        self.test_endpoint("è·å–é£é™©ä¿¡æ¯", "GET", f"/api/v1/trading/risk/{session_id}")
        self.test_endpoint("è·å–è¿æ¥çŠ¶æ€", "GET", f"/api/v1/trading/status/{session_id}")
        
        # 3.3 è®¢å•ç›¸å…³
        self.test_endpoint("è·å–è®¢å•åˆ—è¡¨", "GET", f"/api/v1/trading/orders/{session_id}")
        self.test_endpoint("è·å–æˆäº¤è®°å½•", "GET", f"/api/v1/trading/trades/{session_id}")
        self.test_endpoint("è·å–ç­–ç•¥åˆ—è¡¨", "GET", f"/api/v1/trading/strategies/{session_id}")
        
        # 3.4 ä¸‹å•æµ‹è¯•ï¼ˆæ¨¡æ‹Ÿæ¨¡å¼ä¸‹ä¸ä¼šçœŸå®ä¸‹å•ï¼‰
        print("\n  âš ï¸  ä¸‹å•æµ‹è¯•ï¼ˆæ¨¡æ‹Ÿæ¨¡å¼ï¼Œä¸ä¼šçœŸå®ä¸‹å•ï¼‰")
        order_request = {
            "stock_code": "000001.SZ",
            "side": "BUY",
            "volume": 100,
            "price": 13.50,
            "order_type": "LIMIT"
        }
        self.test_endpoint("æäº¤è®¢å•", "POST", f"/api/v1/trading/order/{session_id}", order_request)
        
        # æ’¤å•æµ‹è¯•
        cancel_request = {"order_id": "mock_order_001"}
        self.test_endpoint("æ’¤é”€è®¢å•", "POST", f"/api/v1/trading/cancel/{session_id}", cancel_request)
        
        # 3.5 æ–­å¼€è¿æ¥
        self.test_endpoint("æ–­å¼€è´¦æˆ·è¿æ¥", "POST", f"/api/v1/trading/disconnect/{session_id}")
    
    def run_subscription_tests(self):
        """è¿è¡Œè®¢é˜…æ¥å£æµ‹è¯•"""
        print("\n" + "=" * 60)
        print("ğŸ“‹ 4. è¡Œæƒ…è®¢é˜…æ¥å£")
        print("=" * 60)
        
        # åˆ›å»ºè®¢é˜…
        subscribe_request = {
            "symbols": ["600519.SH", "000001.SZ"],
            "period": "1d",
            "subscription_type": "quote"
        }
        result = self.test_endpoint("åˆ›å»ºè¡Œæƒ…è®¢é˜…", "POST", "/api/v1/data/subscription", subscribe_request)
        
        # åˆ—å‡ºè®¢é˜…
        self.test_endpoint("åˆ—å‡ºæ‰€æœ‰è®¢é˜…", "GET", "/api/v1/data/subscriptions")
        
        # å¦‚æœåˆ›å»ºæˆåŠŸï¼Œè·å–è®¢é˜…ä¿¡æ¯å¹¶å–æ¶ˆ
        if result.success and result.response_data:
            subscription_id = result.response_data.get("subscription_id", "")
            if subscription_id:
                print(f"  ğŸ“ è·å–åˆ° subscription_id: {subscription_id}")
                self.test_endpoint("è·å–è®¢é˜…ä¿¡æ¯", "GET", f"/api/v1/data/subscription/{subscription_id}")
                self.test_endpoint("å–æ¶ˆè®¢é˜…", "DELETE", f"/api/v1/data/subscription/{subscription_id}")
    
    def print_summary(self):
        """æ‰“å°æµ‹è¯•æ‘˜è¦"""
        print("\n" + "=" * 60)
        print("ğŸ“Š æµ‹è¯•ç»“æœæ‘˜è¦")
        print("=" * 60)
        
        print(f"\n  æ€»æµ‹è¯•æ•°:   {self.stats.total}")
        print(f"  âœ… é€šè¿‡:    {self.stats.passed}")
        print(f"  âŒ å¤±è´¥:    {self.stats.failed}")
        print(f"  æˆåŠŸç‡:     {self.stats.success_rate:.1f}%")
        
        # å¤±è´¥çš„æµ‹è¯•è¯¦æƒ…
        failed_tests = [r for r in self.stats.results if not r.success]
        if failed_tests:
            print("\n  å¤±è´¥çš„æµ‹è¯•:")
            for i, result in enumerate(failed_tests, 1):
                print(f"    {i}. {result.name}")
                if result.error:
                    print(f"       {result.error[:80]}")
        
        # å“åº”æ—¶é—´ç»Ÿè®¡
        successful_tests = [r for r in self.stats.results if r.success]
        if successful_tests:
            avg_time = sum(r.response_time for r in successful_tests) / len(successful_tests)
            max_time = max(r.response_time for r in successful_tests)
            min_time = min(r.response_time for r in successful_tests)
            print(f"\n  å“åº”æ—¶é—´ç»Ÿè®¡:")
            print(f"    å¹³å‡: {avg_time:.0f}ms")
            print(f"    æœ€å¿«: {min_time:.0f}ms")
            print(f"    æœ€æ…¢: {max_time:.0f}ms")
        
        print("\n" + "=" * 60)


def test_grpc(host: str, port: int = 50051):
    """æµ‹è¯•gRPCæ¥å£"""
    print("\n" + "=" * 60)
    print("ğŸ“‹ 5. gRPCæ¥å£æµ‹è¯•")
    print("=" * 60)
    
    try:
        import grpc
        sys.path.insert(0, '.')
        from generated import health_pb2, health_pb2_grpc
        
        channel = grpc.insecure_channel(f'{host}:{port}')
        stub = health_pb2_grpc.HealthStub(channel)
        
        start_time = time.time()
        response = stub.Check(health_pb2.HealthCheckRequest(service=""))
        response_time = (time.time() - start_time) * 1000
        
        status_map = {0: "UNKNOWN", 1: "SERVING", 2: "NOT_SERVING"}
        status_name = status_map.get(response.status, "UNKNOWN")
        
        if response.status == 1:
            print(f"  âœ… gRPCå¥åº·æ£€æŸ¥: {status_name} ({response_time:.0f}ms)")
            return True
        else:
            print(f"  âŒ gRPCå¥åº·æ£€æŸ¥: {status_name} ({response_time:.0f}ms)")
            return False
            
    except ImportError:
        print("  âš ï¸  æœªå®‰è£…grpcæˆ–æœªç”Ÿæˆprotoä»£ç ï¼Œè·³è¿‡gRPCæµ‹è¯•")
        print("     å®‰è£…: pip install grpcio grpcio-tools")
        print("     ç”Ÿæˆ: python scripts/generate_proto.py")
        return False
    except Exception as e:
        print(f"  âŒ gRPCæµ‹è¯•å¤±è´¥: {e}")
        return False


def main():
    parser = argparse.ArgumentParser(description="è¿œç¨‹æœåŠ¡APIæµ‹è¯•è„šæœ¬")
    parser.add_argument("--host", default="101.43.116.10", help="æœåŠ¡å™¨IPåœ°å€")
    parser.add_argument("--port", type=int, default=8000, help="REST APIç«¯å£")
    parser.add_argument("--grpc-port", type=int, default=50051, help="gRPCç«¯å£")
    parser.add_argument("--api-key", default="dev-api-key-001", help="APIå¯†é’¥")
    parser.add_argument("--timeout", type=int, default=30, help="è¯·æ±‚è¶…æ—¶(ç§’)")
    parser.add_argument("--grpc", action="store_true", help="åŒæ—¶æµ‹è¯•gRPCæ¥å£")
    parser.add_argument("--quick", action="store_true", help="å¿«é€Ÿæ¨¡å¼(ä»…æµ‹è¯•å¥åº·æ£€æŸ¥)")
    args = parser.parse_args()
    
    print("=" * 60)
    print("ğŸš€ è¿œç¨‹æœåŠ¡APIå®Œæ•´æµ‹è¯•")
    print("=" * 60)
    print(f"  æœåŠ¡å™¨:    {args.host}:{args.port}")
    print(f"  APIå¯†é’¥:   {args.api_key[:10]}...")
    print(f"  è¶…æ—¶è®¾ç½®:  {args.timeout}ç§’")
    print(f"  å¼€å§‹æ—¶é—´:  {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}")
    
    # åˆ›å»ºæµ‹è¯•å™¨
    tester = APITester(args.host, args.port, args.api_key, args.timeout)
    
    # è¿è¡Œæµ‹è¯•
    tester.run_health_tests()
    
    if not args.quick:
        tester.run_data_api_tests()
        tester.run_trading_api_tests()
        tester.run_subscription_tests()
    
    # gRPCæµ‹è¯•
    if args.grpc:
        test_grpc(args.host, args.grpc_port)
    
    # æ‰“å°æ‘˜è¦
    tester.print_summary()
    
    print(f"  ç»“æŸæ—¶é—´:  {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}")
    print("=" * 60)
    
    # è¿”å›é€€å‡ºç 
    return 0 if tester.stats.failed == 0 else 1


if __name__ == "__main__":
    sys.exit(main())
